fix text overflow bug on company name on safari

--- a/gatsby/src/assets/styles/components/_modal.scss
+++ b/gatsby/src/assets/styles/components/_modal.scss
@@ -13,7 +13,7 @@
                 color: $black;
                 //@at-root: lowercase;
                 font-weight: 700;
-                max-width: 115px;
+                max-width: 125px;
                 line-height: 23.53px !important;
             }
 
